--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "live-server",
-    "build": "npx tailwindcss -i ./src/static/input.css -o ./src/static/output.css --watch"
+    "build1": "npx tailwindcss -i ./src/static/input.css -o ./src/static/output.css --watch"
   },
   "keywords": [],
   "author": "",
